# project-5

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  PROJECT_CONTEXT.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-learning.txt  requirements-rl.txt
.cursor/rules/: axon-phase-policy.mdc
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: Dockerfile  README.md  __init__.py  main.py
apps/dashboard/: README.md  app.js  config.js  index.html  package.json  styles.css
apps/learning/: __init__.py
apps/mlops/: __init__.py  backend.py  cards.py  config.py  dataset.py  drift.py  evaluate.py  export.py  features.py  model_builder.py  paths.py  promotion.py  registry.py  train.py
artifacts/mlops/: model_registry.json
artifacts/observability/: logging_sample.jsonl  metrics_snapshot.txt  operational_status_snapshot.json  phase7b_observability_report.json
artifacts/phase8/: phase8_mission_evidence_index.json  phase8_mission_status.json  phase8_mission_timeline.json  phase8_scenario_anomaly_safety_intervention_3e6a064c-b7f0-4bd3-94c1-c80e60751cff.json  phase8_scenario_learning_evidence_review_56f91d1d-4c84-4757-a9a2-4d5f61750264.json  phase8_scenario_normal_operation_d69929f4-c324-427a-bdf8-461af52b0cc6.json  phase8_scenario_summary.txt
artifacts/reliability/: failure_replay_report.json  phase7a_reliability_report.json  service_status_snapshot.json
docs/: phase7_observability.md  phase7_reliability.md  phase8_mission_control.md
docs/adr/: ADR-001-project-architecture-and-profile-strategy.md  ADR-002-redis-streams-over-kafka-placeholder.md  ADR-003-onnx-runtime-over-direct-pytorch-inference-placeholder.md  ADR-004-langgraph-and-langchain-agent-stack-placeholder.md  ADR-004-phase3-langgraph-langchain-safety-copilot.md  ADR-005-phase4-local-first-mlops-mlflow-optional.md  ADR-005-ros2-thin-adapter-and-nav2-slam-minilab-placeholder.md  ADR-006-phase4-manual-candidate-promotion.md  ADR-007-digital-twin-state-mirror-design.md  ADR-008-ros2-thin-adapter-scope-fase-5.md  ADR-009-nav2-slam-minilab-scope.md  ADR-010-headless-minisim-no-gazebo-rviz.md  ADR-011-phase-6a-federated-learning-flower-fedavg.md  ADR-012-rl-micro-module-operational-policy.md  ADR-013-phase8-integrated-mission-control.md
docs/architecture/: README.md  event-flow.md  profiles.md  stream-registry.md  system-context.md
docs/business/: AXON_BUSINESS_CASE.md  README.md
docs/cost-hardware/: local-vs-cloud-profiles.md
docs/dashboard/: DEMO_GUIDE.md
docs/data-cards/: synthetic-signals-card.md
docs/evidence/: README.md  candidate-promotion-workflow.md  data-card-synthetic-replay.md  drift-and-continual-learning.md  evidence-checklist.md  model-card-emg-v2-candidate.md  model-card-imu-v2-candidate.md  phase-3-agent-graph.md  phase-3-agents-safety.md  phase-3-benchmarks.md  phase-3-trace-sample.json  phase-4-mlops.md  phase-4-verification.md  phase-5-5-nav2-slam-minilab.md  phase-5-digital-twin-ros2.md  phase-6a-federated-learning.md  phase-6b-rl-micro-module.md  phase2-inference-benchmark.md  phase8_snapshot_note.md  phase9_capability_truth_matrix.md  phase9_final_seal_report.md  phase9_verification_report.md
docs/model-cards/: README.md  emg-anomaly-v0.md  imu-movement-v0.md
docs/portfolio/: AXON_CASE_STUDY.md  CLAIMS_AND_POSITIONING.md  PORTFOLIO_COPY.md  TECHNICAL_QA.md
docs/production/: ENTERPRISE_PRODUCTION_PATH.md  README.md
docs/runbooks/: README.md  demo-runbook-placeholder.md  operator-copilot.md
docs/safety/: biomedical-claims-policy.md  human-in-the-loop-policy.md  phase-3-safety-envelope.md
docs/schemas/: event-contracts.md  topic-taxonomy.md
infra/grafana/: README.md
infra/mosquitto/: mosquitto.conf
infra/prometheus/: prometheus.yml
replay/: README.md  generate_scenarios.py  replay_publish.py
replay/scenarios/: fatigue_event.jsonl  movement_spike.jsonl  multi_anomaly.jsonl  normal_session.jsonl  sensor_dropout.jsonl
scripts/: README.md  __init__.py  benchmark_inference.py  dev_check.py  generate_phase2_models.py  generate_phase3_evidence.py  run_federated_learning.py  run_mlops_pipeline.py  run_phase8_mission_scenario.py  run_rl_micro_module.py  scan_claims.py  test_phase_regression.sh  trigger_simulated_drift.py  verify_phase4.sh  verify_phase6a.sh  verify_phase6b.sh  verify_phase8.sh  verify_phase9.sh
scripts/demo/: capture-phase10a-screenshots.mjs  capture_phase10a_screenshots.py  capture_phase10c2a_dashboard_ux.py  package.json  phase10a_verify_demo.sh  validate_phase10a_screenshots.py
scripts/observability/: check_phase7_observability.py
scripts/reliability/: check_phase7_reliability.py
services/agent-orchestrator/: README.md
services/digital-twin/: README.md
services/edge-inference/: Dockerfile  README.md
services/fusion-service/: README.md
services/learning/: Dockerfile  Dockerfile.rl  README.md
services/ros2-bridge/: CMakeLists.txt  Dockerfile  README.md  package.xml
services/ros2-bridge/axon_ros2_bridge/: __init__.py  twin_bridge_node.py
services/ros2-bridge/launch/: axon_bridge.launch.py
services/ros2-bridge/srv/: TwinCommand.srv
services/ros2-nav-slam-minilab/: Dockerfile  README.md
services/ros2-nav-slam-minilab/axon_nav_slam_minilab/: package.xml  setup.cfg  setup.py
services/ros2-nav-slam-minilab/axon_nav_slam_minilab/axon_nav_slam_minilab/: __init__.py  axon_nav_slam_bridge.py  mini_world_node.py  nav_goal_runner.py  nav_state_machine.py  slam_status_node.py  world_model.py
services/ros2-nav-slam-minilab/axon_nav_slam_minilab/config/: nav2_params.yaml  slam_toolbox_params.yaml  world.yaml
services/ros2-nav-slam-minilab/axon_nav_slam_minilab/launch/: nav_slam_minilab.launch.py
services/ros2-nav-slam-minilab/axon_nav_slam_minilab/maps/: .gitignore  README.md
services/sensor-generators/: Dockerfile  README.md
tests/: README.md  test_generators.py  test_phase2_edge_ai.py  test_phase3_agents.py  test_phase5_5_nav_slam.py  test_phase5_twin.py  test_replay_jsonl.py  test_ros2_bridge_smoke.py  test_schemas.py  test_topic_router.py  test_websocket_format.py
tests/phase4/: test_mlops.py
(+137 files in other folders)
