[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon"
version = "0.3.0"
description = "AXON - Bio-Robotics Edge Command System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AXON Contributors" }]
keywords = ["edge-ai", "iot", "robotics", "telemetry", "synthetic-monitoring"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "aiomqtt>=2.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]
edge-ai = [
    "onnxruntime>=1.17.0,<2.0.0",
    "onnx>=1.14.0,<2.0.0",
    "numpy>=1.26.0",
]
agents = []      # Phase 3: langgraph, langchain
mlops = []       # Phase 4: mlflow, training tooling
ros2 = []        # Phase 5+: ROS2 bridge dependencies
learning = []    # Phase 6: flower, gymnasium, stable-baselines3
observability = []  # Phase 7: opentelemetry SDK/exporters

[project.scripts]
axon-dev-check = "scripts.dev_check:main"

[tool.setuptools.packages.find]
where = [".", "services/sensor-generators", "services/edge-inference"]
include = ["apps*", "scripts*", "axon_generators*", "edge_inference*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "scripts", "tests", "services/sensor-generators", "services/edge-inference", "replay"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
