[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon"
version = "0.4.0"
description = "AXON - Bio-Robotics Edge Command System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AXON Contributors" }]
keywords = ["edge-ai", "iot", "robotics", "telemetry", "synthetic-monitoring"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "aiomqtt>=2.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]
edge-ai = [
    "onnxruntime>=1.17.0,<2.0.0",
    "onnx>=1.14.0,<2.0.0",
    "numpy>=1.26.0",
]
agents = [
    "langgraph>=0.4,<0.5",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
]
mlops = [
    "scikit-learn>=1.4,<2.0",
    "skl2onnx>=1.16,<2.0",
    "onnxruntime>=1.17.0,<2.0.0",
    "onnx>=1.14.0,<2.0.0",
    "numpy>=1.26.0",
]
ros2 = []        # Phase 5+: ROS2 bridge dependencies
learning = [
    "mlflow>=2.13,<3.1",
]
# Phase 6A federated learning (Flower + torch). Isolated to the learning
# profile; NOT installed by `make install` / core. See requirements-learning.txt
# (preferred install path, with a CPU-only torch wheel).
federated = [
    "flwr[simulation]==1.30.0",
    "torch>=2.2,<3.0",
    "mlflow>=2.13,<3.1",
    "numpy>=1.26.0",
    "scipy>=1.11",
]
# Phase 6B RL micro-module (Gymnasium + Stable-Baselines3 PPO). Isolated to the
# learning profile; NOT installed by `make install` / core. See requirements-rl.txt
# (preferred install path, with a CPU-only torch wheel).
rl = [
    "gymnasium==0.29.1",
    "stable-baselines3==2.3.2",
    "torch>=2.2,<3.0",
    "mlflow>=2.13,<3.1",
    "numpy>=1.26.0",
]
observability = []  # Phase 7: opentelemetry SDK/exporters

[project.scripts]
axon-dev-check = "scripts.dev_check:main"

[tool.setuptools.packages.find]
where = [".", "services/sensor-generators", "services/edge-inference"]
include = ["apps*", "scripts*", "axon_generators*", "edge_inference*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "scripts", "tests", "services/sensor-generators", "services/edge-inference", "replay"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
